// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Browser instance 1`] = `
<Browser
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  home="about:blank"
  id={null}
  kbBack="alt+arrowleft"
  kbForward="alt+arrowright"
  kbHome="alt+home"
  kbNextSearch="f3"
  kbPreviousSearch="alt+f3"
  kbRefresh="alt+r"
  kbSnapshot=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  notooltips={false}
  obj="Browser"
  onClip={[Function]}
  onOpen={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  uri="http://example.com"
  useparser={false}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Browser instance with empty uri values 1`] = `
<Browser
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  home=""
  id={null}
  kbBack="alt+arrowleft"
  kbForward="alt+arrowright"
  kbHome="alt+home"
  kbNextSearch="f3"
  kbPreviousSearch="alt+f3"
  kbRefresh="alt+r"
  kbSnapshot=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  notooltips={false}
  obj="Browser"
  onClip={[Function]}
  onOpen={[Function]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  uri=""
  useparser={false}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of the Browser props object 1`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "hidden": false,
  "home": "about:blank",
  "id": null,
  "kbBack": "alt+arrowleft",
  "kbForward": "alt+arrowright",
  "kbHome": "alt+home",
  "kbNextSearch": "f3",
  "kbPreviousSearch": "alt+f3",
  "kbRefresh": "alt+r",
  "kbSnapshot": "",
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "nopropagation": false,
  "notheme": false,
  "notooltip": false,
  "notooltips": false,
  "obj": "Browser",
  "onClip": [Function],
  "onOpen": [Function],
  "padding": null,
  "ripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "uri": "about:blank",
  "useparser": false,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of the Browser props object 2`] = `
Object {
  "children": null,
  "search": "",
  "sizing": "normal",
  "style": Object {},
  "uri": "",
  "uriHistory": Immutable.List [],
}
`;
